	-- Made constructors of delegated proxies package-visible rather than public. Many thanks to 
	   Oliver Zemann for calling attention to this issue.
	-- Some fixes and improvements to cfg and log libraries, so that fewer superfluous warnings
	   get emitted on startup.
c3p0-0.9.5-pre2
	-- Modified unwrap / isWrapperFor methods in proxies to be more permissive, to accept class
	   objects for superinterfaces of the wrapped interface as well as of implementation
	   classes.
	-- Added support for SLF4J / logback logging, defined short aliases for adapters to
	   the various logging libraries, updated documentation with new logging features
	-- Added and documented HOCON / typesafe-config libary support, available if (and only if) 
	   the typesafe-config library is included with the application.
	-- Refactored mchange-commons-java to eliminate very rare potential deadlocks under simultaneous
	   ClassLoading of file in cfg and log packages, and defined a facade into the cfg library use of
	   which should eliminate the possibility of such deadlocks if it is used assiduously.
	-- actually documented 'com.mchange.v2.log.jdk14logging.suppressStackWalk'. i said i had earlier
	   but apparently not
	-- set 'com.mchange.v2.log.jdk14logging.suppressStackWalk' to true by default in mchange-commons-java
c3p0-0.9.5-pre1
	-- Included 'com.mchange.v2.log.jdk14logging.suppressStackWalk' in c3p0 docs.
	-- In mchange-commons: Added a config property for jdk14 logging users:
	   'com.mchange.v2.log.jdk14logging.suppressStackWalk' allows clients to speed up logging
	   by suppressing analyzing the stack trace for the caller. (Only the name of the logger will
	   be given.)
	-- Modified DataSource to include an (unsupported) getParentLogger() method for JDK7 builds
	-- Handle JDBC4 Connection.isValid properly
	-- Lots of updates to get c3p0 to proxy and compile JDBC4
	-- Removed some jdk14 support stuff from build.properties
c3p0-0.9.2