@@ -70,6 +70,7 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 #com.mchange.v2.c3p0.impl.NewProxyStatement.level=ALL
 #com.mchange.v2.c3p0.stmt.GooGooStatementCache.level=ALL
 #com.mchange.v2.c3p0.impl.C3P0PooledConnectionPool.level=ALL
+#com.mchange.v2.c3p0.impl.NewPooledConnection.level=ALL
 
 #com.mchange.v2.c3p0.impl.C3P0PooledConnectionPoolManager.level=FINE
 
